src/feyngen/snapshots/_gammaloop__feyngen__test__dots for d~,d~,e-.snap
---
source: src/feyngen/test.rs
expression: dots
---
digraph G {
label="DIS1";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v6" -> "v5" [label="p4 | d~ | Q(3) "];
"v7" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v10" -> "v6" [label="q1 | d~ | Q(6) "];
"v6" -> "v11" [label="q2 | a | Q(7) "];
"v7" -> "v8" [label="q3 | a | Q(8) "];
"v9" -> "v7" [label="q4 | d~ | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v9" -> "v10" [label="q6 | g | Q(11) "];
}

digraph G {
label="DIS2";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v6" -> "v5" [label="p4 | d~ | Q(3) "];
"v7" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v8" [label="q1 | a | Q(6) "];
"v10" -> "v6" [label="q2 | d~ | Q(7) "];
"v9" -> "v7" [label="q3 | d~ | Q(8) "];
"v7" -> "v10" [label="q4 | g | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v9" -> "v11" [label="q6 | a | Q(11) "];
}

digraph G {
label="DIS3";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v10" -> "v6" [label="q2 | d~ | Q(7) "];
"v6" -> "v11" [label="q3 | a | Q(8) "];
"v7" -> "v8" [label="q4 | a | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v9" -> "v10" [label="q6 | g | Q(11) "];
}

digraph G {
label="DIS4";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v6" -> "v8" [label="q2 | a | Q(7) "];
"v10" -> "v6" [label="q3 | d~ | Q(8) "];
"v7" -> "v10" [label="q4 | g | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v9" -> "v11" [label="q6 | a | Q(11) "];
}

digraph G {
label="DIS5";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v6" -> "v8" [label="q2 | a | Q(7) "];
"v10" -> "v6" [label="q3 | d~ | Q(8) "];
"v7" -> "v9" [label="q4 | g | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v10" -> "v11" [label="q6 | a | Q(11) "];
}

digraph G {
label="DIS6";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v10" -> "v6" [label="q2 | d~ | Q(7) "];
"v6" -> "v11" [label="q3 | a | Q(8) "];
"v7" -> "v10" [label="q4 | g | Q(9) "];
"v8" -> "v9" [label="q5 | a | Q(10) "];
"v11" -> "v8" [label="q6 | e- | Q(11) "];
}

digraph G {
label="DIS10";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v6" -> "v5" [label="p4 | d~ | Q(3) "];
"v7" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | g | Q(6) "];
"v10" -> "v6" [label="q2 | d~ | Q(7) "];
"v9" -> "v7" [label="q3 | d~ | Q(8) "];
"v8" -> "v10" [label="q4 | a | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v9" -> "v11" [label="q6 | a | Q(11) "];
}

digraph G {
label="DIS11";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v10" -> "v6" [label="q2 | d~ | Q(7) "];
"v6" -> "v10" [label="q3 | g | Q(8) "];
"v7" -> "v8" [label="q4 | a | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v9" -> "v11" [label="q6 | a | Q(11) "];
}

digraph G {
label="DIS12";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v6" -> "v9" [label="q2 | g | Q(7) "];
"v10" -> "v6" [label="q3 | d~ | Q(8) "];
"v7" -> "v8" [label="q4 | a | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v10" -> "v11" [label="q6 | a | Q(11) "];
}

digraph G {
label="DIS13";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v10" -> "v6" [label="q2 | d~ | Q(7) "];
"v6" -> "v10" [label="q3 | g | Q(8) "];
"v7" -> "v11" [label="q4 | a | Q(9) "];
"v8" -> "v9" [label="q5 | a | Q(10) "];
"v11" -> "v8" [label="q6 | e- | Q(11) "];
}

digraph G {
label="DIS15";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v6" -> "v7" [label="q2 | g | Q(7) "];
"v10" -> "v6" [label="q3 | d~ | Q(8) "];
"v8" -> "v9" [label="q4 | a | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v10" -> "v11" [label="q6 | a | Q(11) "];
}

digraph G {
label="DIS16";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v2" -> "v9" [label="p1 | d~ | Q(0) "];
"v1" -> "v10" [label="p2 | d~ | Q(1) "];
"v0" -> "v11" [label="p3 | e- | Q(2) "];
"v7" -> "v5" [label="p4 | d~ | Q(3) "];
"v9" -> "v4" [label="p5 | d~ | Q(4) "];
"v8" -> "v3" [label="p6 | e- | Q(5) "];
"v6" -> "v7" [label="q1 | d~ | Q(6) "];
"v6" -> "v7" [label="q2 | g | Q(7) "];
"v10" -> "v6" [label="q3 | d~ | Q(8) "];
"v8" -> "v10" [label="q4 | a | Q(9) "];
"v11" -> "v8" [label="q5 | e- | Q(10) "];
"v9" -> "v11" [label="q6 | a | Q(11) "];
}
