src/feyngen/snapshots/_gammaloop__feyngen__test__dots for d~,e-.snap
---
source: src/feyngen/test.rs
expression: dots
---
digraph G {
label="DIS0";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v1" -> "v8" [label="p1 | d~ | Q(0) "];
"v0" -> "v9" [label="p2 | e- | Q(1) "];
"v6" -> "v3" [label="p3 | d~ | Q(2) "];
"v7" -> "v2" [label="p4 | e- | Q(3) "];
"v4" -> "v5" [label="q1 | d~ | Q(4) "];
"v8" -> "v4" [label="q2 | d~ | Q(5) "];
"v4" -> "v9" [label="q3 | a | Q(6) "];
"v5" -> "v6" [label="q4 | d~ | Q(7) "];
"v5" -> "v7" [label="q5 | a | Q(8) "];
"v6" -> "v8" [label="q6 | g | Q(9) "];
"v9" -> "v7" [label="q7 | e- | Q(10) "];
}

digraph G {
label="DIS4";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v1" -> "v8" [label="p1 | d~ | Q(0) "];
"v0" -> "v9" [label="p2 | e- | Q(1) "];
"v6" -> "v3" [label="p3 | d~ | Q(2) "];
"v7" -> "v2" [label="p4 | e- | Q(3) "];
"v4" -> "v5" [label="q1 | d~ | Q(4) "];
"v8" -> "v4" [label="q2 | d~ | Q(5) "];
"v4" -> "v9" [label="q3 | a | Q(6) "];
"v5" -> "v6" [label="q4 | d~ | Q(7) "];
"v5" -> "v8" [label="q5 | g | Q(8) "];
"v6" -> "v7" [label="q6 | a | Q(9) "];
"v9" -> "v7" [label="q7 | e- | Q(10) "];
}

digraph G {
label="DIS5";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v1" -> "v8" [label="p1 | d~ | Q(0) "];
"v0" -> "v9" [label="p2 | e- | Q(1) "];
"v6" -> "v3" [label="p3 | d~ | Q(2) "];
"v7" -> "v2" [label="p4 | e- | Q(3) "];
"v5" -> "v4" [label="q1 | d~ | Q(4) "];
"v4" -> "v6" [label="q2 | d~ | Q(5) "];
"v4" -> "v7" [label="q3 | a | Q(6) "];
"v5" -> "v6" [label="q4 | g | Q(7) "];
"v8" -> "v5" [label="q5 | d~ | Q(8) "];
"v9" -> "v7" [label="q6 | e- | Q(9) "];
"v8" -> "v9" [label="q7 | a | Q(10) "];
}

digraph G {
label="DIS6";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v1" -> "v8" [label="p1 | d~ | Q(0) "];
"v0" -> "v9" [label="p2 | e- | Q(1) "];
"v6" -> "v3" [label="p3 | d~ | Q(2) "];
"v7" -> "v2" [label="p4 | e- | Q(3) "];
"v4" -> "v5" [label="q1 | d~ | Q(4) "];
"v4" -> "v7" [label="q2 | a | Q(5) "];
"v8" -> "v4" [label="q3 | d~ | Q(6) "];
"v5" -> "v6" [label="q4 | d~ | Q(7) "];
"v5" -> "v6" [label="q5 | g | Q(8) "];
"v9" -> "v7" [label="q6 | e- | Q(9) "];
"v8" -> "v9" [label="q7 | a | Q(10) "];
}

digraph G {
label="DIS8";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v1" -> "v8" [label="p1 | d~ | Q(0) "];
"v0" -> "v9" [label="p2 | e- | Q(1) "];
"v6" -> "v3" [label="p3 | d~ | Q(2) "];
"v7" -> "v2" [label="p4 | e- | Q(3) "];
"v4" -> "v5" [label="q1 | d~ | Q(4) "];
"v8" -> "v4" [label="q2 | d~ | Q(5) "];
"v4" -> "v8" [label="q3 | g | Q(6) "];
"v5" -> "v6" [label="q4 | d~ | Q(7) "];
"v5" -> "v9" [label="q5 | a | Q(8) "];
"v6" -> "v7" [label="q6 | a | Q(9) "];
"v9" -> "v7" [label="q7 | e- | Q(10) "];
}

digraph G {
label="DIS9";
noverlap="scale"; layout="neato";
graph [ fontsize=10 ];
node [ fontsize=7,shape=circle,margin=0,height=0.01 ];
edge [ fontsize=5,arrowsize=0.4 ];
"v1" -> "v8" [label="p1 | d~ | Q(0) "];
"v0" -> "v9" [label="p2 | e- | Q(1) "];
"v6" -> "v3" [label="p3 | d~ | Q(2) "];
"v7" -> "v2" [label="p4 | e- | Q(3) "];
"v4" -> "v5" [label="q1 | d~ | Q(4) "];
"v4" -> "v5" [label="q2 | g | Q(5) "];
"v8" -> "v4" [label="q3 | d~ | Q(6) "];
"v5" -> "v6" [label="q4 | d~ | Q(7) "];
"v6" -> "v7" [label="q5 | a | Q(8) "];
"v9" -> "v7" [label="q6 | e- | Q(9) "];
"v8" -> "v9" [label="q7 | a | Q(10) "];
}
